misc: Change some vscode variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "verilog.formatDirs": [
                 "rtl",
                 "bench"
-        ]
+        ],
+        "verilog.linting.verilator.arguments": "--timing --I./rtl --I./bench"
 }
